--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-Hello spring <br>
-<a href="/home"> home</a>
+Hello Spring!!!<br>
+<a href="/home">Home</a>
 </body>
 </html>
